feat: complete deficiency sprint — E01-E28, SAST/SCA/CI, QA infrastructure, security hardening
Comprehensive deficiency resolution sprint covering the 2026-05-24 full scan (115 findings).

## P0 — Critical (all resolved)
- ABC + @abstractmethod on BaseAgent, BaseCheck
- Silent exception swallows → logger calls (5 domains)
- Makefile .venv setup target
- KB page infinite loop risk (setState outside useEffect)
- New-project step skeleton: TODO → real code generation
- Migration assistant: misleading TODO output → runtime errors
- Products router: X-Demo-Data headers + _demo() wrapper
- docker-compose.prod.yml: unsafe :-defaults → :? mandatory
- README/ONBOARDING: framework/ → frameworks/cortex-java/

## P1 — Important
- ADR governance: 6 duplicate Turkish ADRs archived
- Jenkins credential runbook expanded
- docs/setup/github-secrets.md created
- Engine pipeline_routes: TODO placeholders → action-keyword codegen
- Engine suggestion_engine: TODO → pytest xfail stubs + real assertions
- Engine recorder: pause/resume/status endpoints + TestRecorder.pause()/resume()
- Engine app.py: GET /metrics (Prometheus text format)
- test_recorder: ActionRecorder pause/resume support
- World fixture: removed duplicate setWorldConstructor; .isClosed()/.isConnected() guards
- feature_flags fixture in unit conftest (unblocks 8+ skipped tests)
- docs/INDEX.md: canonical documentation index
- ONBOARDING: Ollama marked optional
- @axe-core/playwright added to devDependencies
- flow-designer schema mismatch: FlowCreate/FlowOut/TspmFlow + migration
- 9 backend service.py facade stubs (accessibility, agents, ai_synthetic_data, automation, catalog, cicd, compliance, evals, mobile)

## P2/P3
- empty lks.featıres.feature deleted
- Feature templates: MyProject/init.feature, TestAutomation/init.feature
- engine/.gitignore: !projects/*/features/ exception
- Makefile: --break-system-packages removed
- docker-compose.yml: clarified ai-test-pipeline comment
- 9 PLAN-*.md root files moved to docs/visio